--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@capacitor/core": "2.0.2",
+    "@angular/common": "~10.1.1",
+    "@angular/core": "~10.1.1",
+    "@angular/forms": "~10.1.1",
+    "@angular/platform-browser": "~10.1.1",
+    "@angular/platform-browser-dynamic": "~10.1.1",
+    "@angular/router": "~10.1.1",
+    "@capacitor/android": "^2.4.1",
+    "@capacitor/core": "^2.4.1",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -29,15 +30,15 @@
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "web-photo-filter": "^2.2.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "2.0.2",
+    "@angular-devkit/build-angular": "^0.1001.1",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler": "~10.1.1",
+    "@angular/compiler-cli": "~10.1.1",
+    "@angular/language-service": "~10.1.1",
+    "@capacitor/cli": "^2.4.1",
     "@ionic/angular-toolkit": "^2.3.3",
     "@ionic/lab": "3.1.5",
     "@types/jasmine": "~3.3.8",
@@ -54,7 +55,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~4.0.2"
   },
   "description": "An Ionic project"
 }
